Контрольная работа.Добавление user'а
